ingress-nginx-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - admin.yh124.space
    secretName: admin-secret
  rules:
  - host: admin.yh124.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-push-admin
            port:
              number: 80
