ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-push-admin
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: weather-push
            port: 
              number: 8080
